updated stuff lol

--- a/html/index.html
+++ b/html/index.html
@@ -32,12 +32,12 @@
             <main>
 
                 <div class="main-image home-image">
-                <img class="corner" src="../images/aidan.jpg" alt="Picture of Aidan"> 
+                <img class="corner" src="../images/aidan.jpeg" alt="Picture of Aidan"> 
                 </div>    
                 
                 <div class="main-container corner">
                     <p> 
-                        > Summary: I'm an aspiring DevOps Engineer who is prioritizing indivdualized learning by earning experience in professional environments. 
+                        > About Me: I'm an aspiring DevOps Engineer who is prioritizing indivdualized learning by earning experience in professional environments. 
                     </p> 
                     <p> 
                         > Location: San Diego Metropolitian
@@ -46,7 +46,18 @@
                         > Education: Palomar Community College
                     </p>
                     <p>
-                        > ...
+                        > Skills: <br> 
+                        // Security Patching for Linux-based OS's <br>
+                        // Identify, Diagnose and Repair Computer Hardware <br>
+                        // Deploy and Administer a Linux Server <br> 
+                        // Bash Scripting <br> 
+                    </p>
+                    <p> 
+                        > Hobbies: <br> 
+                        // Gaming <br>
+                        // Tinkering with various Linux Distros <br>
+                        // Video Editing (DaVinci Resolve)
+
                     </p>
                 </div>
 
@@ -57,7 +68,7 @@
                     <p> Like what you see? Check these links out.</p>
                 </div>
                 <div class="footer-container-bottom">
-                    <p><a href="https://isaiah-earley.com" target="_blank">isaiah-earley.com</a></p> 
+                    <p><a href="https://github.com/Widward1" target="_blank">my github</a></p> 
                     <p><a href="https://github.com/isaiahearley" target="_blank">isaiah's github</a></p>
                 </div>
             </footer>
