--- a/html/index.html
+++ b/html/index.html
@@ -68,7 +68,7 @@
                     <p> Like what you see? Check these links out.</p>
                 </div>
                 <div class="footer-container-bottom">
-                    <p><a href="https://github.com/Widward1" target="_blank">my github</a></p> 
+                    <p><a href="https://swmr.io/" target="_blank">deployed site</a></p> 
                     <p><a href="https://github.com/isaiahearley" target="_blank">isaiah's github</a></p>
                 </div>
             </footer>
