--- a/html/index.html
+++ b/html/index.html
@@ -32,7 +32,7 @@
             <main>
 
                 <div class="main-image home-image">
-                <img class="corner" src="../images/aidan.jpeg" alt="Picture of Aidan"> 
+                <img class="corner" src="../images/aidan.jpg" alt="Picture of Aidan"> 
                 </div>    
                 
                 <div class="main-container corner">
