--- a/html/index.html
+++ b/html/index.html
@@ -65,7 +65,8 @@
 
             <footer>
                 <div class="footer-container-top">
-                    <p> Like what you see? Check these links out.</p>
+                    <p class="mobile"> Want more? Check these!</p>
+                    <p class="tablet-desktop"> Like what you see? Check these links out.</p>
                 </div>
                 <div class="footer-container-bottom">
                     <p><a href="https://swmr.io/" target="_blank">deployed site</a></p> 
