took out folders to prep for publish

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="utf-8">
     <title>Aidan's Site Home</title>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="./styles.css">
     
 </head>
 
@@ -32,7 +32,7 @@
             <main>
 
                 <div class="main-image home-image">
-                <img class="corner" src="../images/aidan.jpg" alt="Picture of Aidan"> 
+                <img class="corner" src="./aidan.jpg" alt="Picture of Aidan"> 
                 </div>    
                 
                 <div class="main-container corner">
