--- a/html/index.html
+++ b/html/index.html
@@ -40,7 +40,7 @@
                         > Summary: I'm an aspiring DevOps Engineer who is prioritizing indivdualized learning by earning experience in professional environments. 
                     </p> 
                     <p> 
-                        > Location: San Diego Metropolitian
+                        > Location: San Diego Metropolitian Area
                     </p>
                     <p>
                         > Education: Palomar Community College
